all functionalities works, pending mySQL, testing, PCF and Jenkins

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,9 +10,9 @@ div, body {
     text-align: left;
   }
   .logoimg {
-    width: 85px;
-    height: 85px;
-    background: #555;
+    width: 170px;
+    height: 100px;
+    background: rgb(14, 13, 13);
   }
   img {
     float: inherit;
@@ -154,7 +154,7 @@ div, body {
   }
 
   button {
-    background-color: rgb(103, 23, 139);
+    background-color: rgb(201, 109, 243);
   }
 
   loginposi{
