--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,13 @@
-<h2>Register</h2>
-<div class="col-md-3">
+<h2 style="text-decoration: underline;">Register</h2>
+<div class="col-md-3" style="font-weight: bolder;">
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <!-- <div class="form-group">
+        <label for="id">User Id</label>
+        <input type="number" formControlName="id" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.id.errors }"/>
+        <div *ngIf="submitted && f.id.errors" class="invalid-feedback">
+            <div *ngIf="f.id.errors.required">User Id is required</div>
+        </div>
+    </div> -->
     <div class="form-group">
         <label for="firstName">First Name</label>
         <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
@@ -31,11 +38,32 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="phone">Phone Number</label>
+        <input type="tel" formControlName="phone" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.phone.errors }"/>
+        <div *ngIf="submitted && f.phone.errors" class="invalid-feedback">
+            <div *ngIf="f.phone.errors.required">Phone Number is required</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="address">Address</label>
+        <input type="text" formControlName="address" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.address.errors }"/>
+        <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
+            <div *ngIf="f.address.errors.required"><Address></Address> is required</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="dateOfBirth">Date of Birth</label>
+        <input type="date" formControlName="dateOfBirth" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.dateOfBirth.errors }"/>
+        <div *ngIf="submitted && f.dateOfBirth.errors" class="invalid-feedback">
+            <div *ngIf="f.dateOfBirth.errors.required">Date of Birth is required</div>
+        </div>   
+    </div>        
+    <div class="form-group">
         <button [disabled]="loading" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1" style="margin-right: 40px;"></span>
             Register
         </button>
-        <a routerLink="/login" class="btn btn-link">Cancel</a>
+        <button routerLink="/login" class="btn btn-primary" style="background-color: grey; text-decoration-color: white;">Cancel</button>
     </div>
 </form>
 </div>
