--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,7 +58,10 @@
             <td>{{user.address}}</td>
             <td>{{user.phone}}</td>
             <td>{{user.dateOfBirth}}</td>
-            <td><button (click)="deleteUser(user.id)" class="btn-sm" style="background-color: tomato;border:solid;">Delete</button></td>
+            <td><button (click)="deleteUser(user.id)" class="btn-sm" style="background-color: rgb(247, 77, 47);border:solid;"><svg width="1.2em" height="1.2em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+              </svg>  Delete</button></td>
         </tr>
     </table> 
 
@@ -68,6 +71,9 @@
     border-style: solid;
     border-color: black;
     border-radius: 1px;
-    background-color: wheat;}
+    background-color: rgb(216, 200, 170);}
+    th{
+    background: linear-gradient(0deg, #f87878 0%, #f87e7e 10%, #dce92c 50%, #f87e7e 90%, #f87878 100%);
+    }
  
     </style>    
